Fix horizontal scrollbar bug

--- a/css/style2.css
+++ b/css/style2.css
@@ -252,6 +252,9 @@
         z-index: 1;
         width: 100%;
         height: 100%;
+        margin-left: -15px;
+        padding-left: 15px;
+
     }
 
     .heapDumppopup {
